# vardheim

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  release-crates.toml
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
crates/vardheim/: Cargo.toml  README.md
crates/vardheim-challenge-dns/: Cargo.toml  README.md
crates/vardheim-challenge-dns/src/: lib.rs
crates/vardheim-challenge-http/: Cargo.toml  README.md
crates/vardheim-challenge-http/src/: lib.rs
crates/vardheim-challenge-tls/: Cargo.toml  README.md
crates/vardheim-challenge-tls/src/: lib.rs
crates/vardheim-core/: Cargo.toml  README.md
crates/vardheim-core/src/: lib.rs
crates/vardheim/src/: lib.rs
docs/: COMPLETENESS.md  CRATE_RELEASES.md  IMPLEMENTATION_PLAN.md  REGISTRY_BASELINE.md  REGRESSION_STRATEGY.md  RELEASE_PLAN.md  RFC_ERRATA.md  RFC_INVENTORY.md  VERSION_PLAN.md  architecture.md  compatibility.md  dependency-policy.md  github-security-settings.md  modularity-policy.md  protocol-conformance.md  release-process.md  security-controls.md  threat-model.md  toolchain-policy.md  unsafe-policy.md
registry/: EXTERNAL_SOURCES.json  README.md  REGISTRY_BASELINE.json  SHA256SUMS
release-notes/: RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.3.1.md
rfc/: ACME_ERRATA.json  README.md  SECTION_INDEX.json  SHA256SUMS
sbom/: vardheim.spdx.json
scripts/: audit_release_plan.py  check-packages.sh  check-rust-version-matrix.sh  check_doc_links.sh  check_latest_tools.sh  check_shell_syntax.sh  checks.sh  fetch-rfcs.sh  generate-sbom.sh  lock-registries.sh  lock-rfcs.sh  registry_baseline.py  release_0_1_gate.sh  release_0_2_gate.sh  release_0_3_1_gate.sh  release_0_3_gate.sh  release_crates.py  release_validation.py  rfc_errata.py  rfc_inventory.py  test-package-contents.py  test-registry-baseline.py  test-release-crates.py  test-release-plan-audit.py  test-release-validation.py  test-rfc-sources.py  validate-modularity-policy.sh  validate-package-contents.py  validate-plan.sh  validate-release-metadata.sh  validate-release-readiness.sh  validate-security-policy.sh  validate_release_metadata.py  validate_release_readiness.py  verify-rfcs.sh
security/pentest/: README.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.3.1.md
