[workspace]
members = [
    "crates/vardheim",
    "crates/vardheim-core",
    "crates/vardheim-challenge-http",
    "crates/vardheim-challenge-dns",
    "crates/vardheim-challenge-tls",
]
default-members = ["crates/vardheim"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/valkyoth/vardheim"
repository = "https://github.com/valkyoth/vardheim"

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
unused_must_use = "deny"
missing_docs = "deny"

[workspace.lints.clippy]
panic = "forbid"
unwrap_used = "forbid"
expect_used = "forbid"
undocumented_unsafe_blocks = "forbid"
indexing_slicing = "forbid"
arithmetic_side_effects = "forbid"
cast_possible_truncation = "forbid"
cast_sign_loss = "forbid"

[profile.release]
overflow-checks = true
codegen-units = 1
lto = "thin"
strip = "symbols"
