[package]
name = "vardheim-challenge-dns"
description = "Runtime-independent DNS ACME challenge primitives for Vardheim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["acme", "dns-01", "certificate", "no-std", "security"]
categories = ["cryptography", "no-std", "network-programming"]

[lints]
workspace = true
