[package]
name = "vardheim-core"
description = "Runtime-independent ACME protocol foundations for Vardheim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["acme", "certificate", "pki", "no-std", "security"]
categories = ["cryptography", "no-std", "network-programming"]

[lints]
workspace = true
